# ai-powered-self-healing-kubernetes-platform

./: .gitignore  README.md  TODO.md
.github/workflows/: ci-cd.yml
argocd/: README.md  application.yaml  appproject.yaml  namespace.yaml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/ai_self_healing_backend/ai/: provider.py
backend/ai_self_healing_backend/app/: main.py  webhooks.py
backend/ai_self_healing_backend/k8s/: client.py  executor.py  loki_client.py
backend/ai_self_healing_backend/service/: ai_json.py  analyzer.py  audit_ledger.py  audit_safe_executor.py  log_collector.py  log_parsing.py  models.py  remediator.py
docs/: ARCHITECTURE.md  CI_CD.md  DEPLOYMENT.md  GITOPS.md  README.md  TROUBLESHOOTING.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
helm/: Chart.yaml  values.yaml
helm/files/: alert-rules.yml  alertmanager.yml  production-pod-logs.json  prometheus.yml
helm/templates/: _helpers.tpl  audit-ledger-configmap.yaml  backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-ingress.yaml  frontend-service.yaml  grafana-dashboards-configmap.yaml  grafana-dashboards-provisioning-configmap.yaml  monitoring-promtail-wrap.yaml  monitoring.yaml  namespace.yaml  promtail-configmap.yaml  promtail-daemonset.yaml  promtail-rbac.yaml  rbac.yaml  serviceaccount.yaml
monitoring/: README.md
monitoring/dashboards/: pod-alerts.json
monitoring/loki/: loki-config.yaml  promtail-config.yaml
(+4 files in other folders)
