[tool.poetry]
name = "ai-self-healing-backend"
version = "0.1.0"
description = "AI-powered Kubernetes self-healing backend (FastAPI)"
authors = ["BlackboxAI <noreply@example.com>"]
readme = "README.md"
packages = [{ include = "ai_self_healing_backend" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.0"
uricorn = "^0.30.0"
uvicorn = "^0.30.0"
pydantic = "^2.8.2"
httpx = "^0.27.0"
python-json-logger = "^2.0.7"
PyYAML = "^6.0.2"

# Kubernetes client
kubernetes = "^30.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.8"
mypy = "^1.11.2"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

